setup pour compilation incrémentale

--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="../styles/index/branch.gen.min.css">
+	<link rel="stylesheet" href="../gen/index/branch.gen.css">
 </head>
 <div class="menu"> 
 	<ul>
